--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <nav class = navigation>
-        <h2> Navigation Barr</h2>
+        <h2> Navigation Bar</h2>
     </nav>
 
     <div class="boxcontainer">
